# SKLint

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  package-lock.json  pyproject.toml  setup.py
crates/sklint-cli/: Cargo.toml
crates/sklint-cli/src/: main.rs
crates/sklint-core/: Cargo.toml
crates/sklint-core/src/: analyzer.rs  blank_lines.rs  comments.rs  config.rs  diagnostic.rs  docstrings.rs  dynamic_attrs.rs  formatter.rs  lib.rs  rules.rs  suppression.rs  syntax_rules.rs
docs/: README.ru.md  examples.ru.md  rules.ru.md
docs/reports/: formatter-fullrun-stablekite-20260630.md
examples/: bad.py  bad.pyi  good.py  pyproject.toml
python/sklint/: __init__.py  __main__.py
scripts/: check-release.sh  check-windows.ps1  package-vscode.py
vscode/: README.ru.md  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts  globals.d.ts
